--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Meu novo website</title>
+<title>Totall Marcas e Patentes</title>
 </head>
 <body>
-	<div>
-		<h1>Olá Mundo!</h1>
-	</div>
+
+<div style='position:relative; top:0px; left:0px;'>
+<img src="Imagens\img1.png">
+<div style='position:absolute; top: -216px; left: -216px;'>
+<img src="Imagens\img2.png">
+<div style='position:absolute; top:216px; left:175px;'>
+<img src="Imagens\img4.png">
+<div style='position:absolute; top:-20px; left:-15px;'>
+<img src="Imagens\img3.png">
+<div style='position:absolute; top:0px; left:0px;'>
+<img src="Imagens\img6.png">
+<div style='position:absolute; top:0px; left:0px;'>
+<img src="Imagens\img5.png">
+<div style='position:absolute; top:-120px; left:920px;'>
+<img src="Imagens\img2_2.png" height="1400" width="1400">>
+
 </body>
 </html>
