--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div style='position:absolute; top:0px; left:0px;'>
 <img src="Imagens\img5.png">
 <div style='position:absolute; top:-120px; left:920px;'>
-<img src="Imagens\img2_2.png" height="1400" width="1400">>
+<img src="Imagens\img7.png" height="1400" width="1400">>
 
 </body>
 </html>
